# ImageProcessing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ImageProcessing.sln  project_plans.txt
ImageProcessing/: CMakeLists.txt  ImageProcessing.vcxproj  ImageProcessing.vcxproj.filters  main.cpp  vlTest.cpp
ImageProcessing/Resources/glsl/: border_highlighting_effect.fs  brightness_contrast_effect.fs  sobel_distance.fs  texture_ratio_view.vs  texture_view.vs  window_screen.fs
ImageProcessing/resources/fbx/: Sc2.fbx
ImageProcessing/resources/glsl/: border_highlighting_effect.fs  gaussian_blur_effect.fs  pbr.fs  pbr.vs  skybox.fs  skybox.vs  sobel_distance.fs  test_plane_view.vs  texture_view.fs
ImageProcessing/resources/glsl/include/: colors.glsl  coordinate_system_transformations.glsl  gaussian.glsl  math.glsl  pbr.glsl  screen_transformations.glsl
ImageProcessing/source/AppLogic/: ImageProcessing.cpp  ImageProcessing.h
ImageProcessing/source/AppLogic/AppModes/: AppMode.cpp  AppMode.h  AppModeList.cpp  AppModeList.h  Editor3DMode.cpp  Editor3DMode.h  ImageProcessing.cpp  ImageProcessing.h  ImageProcessingMode.cpp  ImageProcessingMode.h
ImageProcessing/source/AppLogic/Editor3D/: Mode3D.cpp  Mode3D.h  Mode3DList.cpp  Mode3DList.h
ImageProcessing/source/AppLogic/Editor3D/Modes3D/: PBRViewMode.cpp  PBRViewMode.h
ImageProcessing/source/AppLogic/Effects/: IEffect.cpp  IEffect.h  ParamsSelector.cpp  ParamsSelector.h  Selector.cpp  Selector.h
ImageProcessing/source/AppLogic/Effects/WidgetData/: EffectParamWidget.cpp  EffectParamWidget.h  EffectWidget.cpp  EffectWidget.h  ParamWidget.cpp  ParamWidget.h  ParamsWidget.cpp  ParamsWidget.h
ImageProcessing/source/AppLogic/ImageProcessing/: BrightnessContrastImageEffect.cpp  BrightnessContrastImageEffect.h  ImageEffect.cpp  ImageEffect.h  ImageEffectList.cpp  ImageEffectList.h
ImageProcessing/source/AppLogic/ImageProcessing/ImageEffects/: BorderHighlightingImageEffect.cpp  BorderHighlightingImageEffect.h  BrightnessContrastImageEffect.cpp  BrightnessContrastImageEffect.h  GaussianBlurImageEffect.cpp  GaussianBlurImageEffect.h
ImageProcessing/source/AppLogic/SelectTools/: ParamsSelectable.cpp  ParamsSelectable.h  Selectable.cpp  Selectable.h  SelectableList.cpp  SelectableList.h
ImageProcessing/source/AppLogic/SelectTools/Widgets/: ParamWidget.cpp  ParamWidget.h  ParamsWidget.h  SelectableListWidget.cpp  SelectableListWidget.h
ImageProcessing/source/AppLogic/Selectors/: ParamsSelector.cpp  ParamsSelector.h
ImageProcessing/source/AppLogic/Selectors/WidgetData/: ParamWidget.cpp  ParamWidget.h  ParamsWidget.cpp
ImageProcessing/source/AppLogic/Util/: Timer.cpp  Timer.h
ImageProcessing/source/AppLogic/VLExtension/: Actor.cpp  Actor.h  Effect.cpp  Effect.h  EffectPipeline.cpp  EffectPipeline.h  FBORender.cpp  FBORender.h  Pipeline.cpp  Pipeline.h  Scene.cpp  Scene.h  SceneController.h  Shader.cpp  Shader.h  ViewWindow.cpp  ViewWindow.h
ImageProcessing/source/AppLogic/VLExtension/Actors/: FPSActor.h  TextureRatioViewActor.cpp  TextureRatioViewActor.h  TextureViewActor.cpp  TextureViewActor.h
ImageProcessing/source/AppLogic/VLExtension/Effects/: BorderHighlightingEffect.cpp  BorderHighlightingEffect.h  BrightnessContrastEffect.cpp  BrightnessContrastEffect.h
ImageProcessing/source/AppLogic/VLExtension/Util/: TextureReader.h
ImageProcessing/source/AppLogic/WidgetNodes/: WidgetNode.cpp  WidgetNode.h
ImageProcessing/source/GUI/: Editor3DModeWidget.cpp  Editor3DModeWidget.h  ImageProcessingModeWidget.cpp  ImageProcessingModeWidget.h  MainWindow.cpp  MainWindow.h  ParamWidget.cpp  ParamWidget.h  ParamsWidget.cpp  ParamsWidget.h  SelectableListWidget.cpp  SelectableListWidget.h  ViewWindow.cpp  ViewWindow.h
ImageProcessing/source/VLExtension/: Actor.cpp  Effect.cpp  EffectPipeline.h  FBORender.h  Pipeline.cpp  ViewWindow.cpp
ImageProcessing/source/VLExtension/Actors/: TextureRatioViewActor.h  TextureViewActor.h
ImageProcessing/source/VLExtension/Effects/: BorderHighlightingEffect.cpp  GaussianBlurEffect.cpp
ImageProcessing/source/VLExtension/Util/FBX_Support/: FbxMeshConverter.cpp  FbxMeshConverter.h  FbxResource.cpp  FbxResource.h
